# django-brotli

./: .bumpversion.toml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  Taskfile.yml  codecov.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_setup.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml  main.workflow
.github/workflows/: codeql-analysis.yml  development.yml  preview.yml  pythonpackage.yml  release.yml
django_brotli/: __init__.py  middleware.py
tests/: __init__.py  conftest.py  test_is_current.py  test_middleware.py  utils.py
